[gd_scene load_steps=10 format=3 uid="uid://dtcrqkyii3yeo"]

[ext_resource type="PackedScene" uid="uid://br53allf54t2g" path="res://scenes/vulume_show.tscn" id="1_33p7r"]
[ext_resource type="Script" path="res://scripts/Level/level_1.gd" id="1_xkxcy"]
[ext_resource type="Texture2D" uid="uid://bbousqhf2u2v4" path="res://assets/background/park/park_1.png" id="2_bwglc"]
[ext_resource type="Texture2D" uid="uid://47ru5i5x08qa" path="res://assets/button_background_new.png" id="4_7v4m4"]
[ext_resource type="Texture2D" uid="uid://qjiywcfu6gin" path="res://assets/button_background_new2.png" id="5_fnqoj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mvf05"]
texture = ExtResource("4_7v4m4")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r46fs"]
texture = ExtResource("5_fnqoj")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hmsyy"]
texture = ExtResource("4_7v4m4")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ll21l"]
texture = ExtResource("4_7v4m4")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[node name="Level_1" type="Node2D"]
script = ExtResource("1_xkxcy")

[node name="background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_bwglc")

[node name="vulume_show" parent="." instance=ExtResource("1_33p7r")]

[node name="tips" type="Label" parent="."]
offset_left = 440.0
offset_top = 78.0
offset_right = 840.0
offset_bottom = 133.0
theme_override_font_sizes/font_size = 40
text = "保持音量在合适大小！"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="tips"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 59.0
offset_right = 20.0
offset_bottom = 82.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]

[node name="count_down" type="Label" parent="Timer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_mvf05")
metadata/_edit_use_anchors_ = true

[node name="start" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxTexture_r46fs")
theme_override_styles/hover = SubResource("StyleBoxTexture_hmsyy")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hmsyy")
theme_override_styles/normal = SubResource("StyleBoxTexture_hmsyy")
text = "开始"

[node name="continue" type="Button" parent="."]
visible = false
offset_right = 112.0
offset_bottom = 87.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxTexture_r46fs")
theme_override_styles/hover = SubResource("StyleBoxTexture_hmsyy")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hmsyy")
theme_override_styles/normal = SubResource("StyleBoxTexture_hmsyy")
text = "继续"

[node name="summary" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1280, 720)
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
alignment = 1

[node name="speak_score" type="Label" parent="summary"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_ll21l")
text = "得分："
horizontal_alignment = 1
vertical_alignment = 1

[node name="exp_and_gold" type="Label" parent="summary"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_ll21l")
text = "经验值：金币："
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]

[editable path="vulume_show"]
